--- a/SLBr/Resources/Credits.html
+++ b/SLBr/Resources/Credits.html
@@ -114,7 +114,7 @@ Use of this source code is governed by a GNU license that can be found in the LI
                 <input type="checkbox" hidden id="0" />
                 <label class="show button_style icon_button" for="0" tabindex="0" title="License"></label>
                 <div class="licence">
-<pre>SLBr. The browser that prioritizes a faster web.
+<pre>SLBr. A lightweight browser for a faster web.
 Copyright (c) SLT Softwares
 
 This program is free software: you can redistribute it and/or modify
@@ -303,6 +303,41 @@ SOFTWARE.</pre>
 // THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 // (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 // OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</pre>
+                </div>
+            </div>
+            <div class="product">
+                <span class="title">WebView2</span>
+                <span class="homepage button_style icon_button"><a target="_blank" title="Homepage" href="https://developer.microsoft.com/en-us/Microsoft-edge/webview2/"></a></span>
+                <input type="checkbox" hidden id="6" />
+                <label class="show button_style icon_button" for="6" tabindex="0" title="License"></label>
+                <div class="licence">
+                    <pre>Copyright (C) Microsoft Corporation. All rights reserved.
+
+Redistribution and use in source and binary forms, with or without
+modification, are permitted provided that the following conditions are
+met:
+
+   * Redistributions of source code must retain the above copyright
+notice, this list of conditions and the following disclaimer.
+   * Redistributions in binary form must reproduce the above
+copyright notice, this list of conditions and the following disclaimer
+in the documentation and/or other materials provided with the
+distribution.
+   * The name of Microsoft Corporation, or the names of its contributors 
+may not be used to endorse or promote products derived from this
+software without specific prior written permission.
+
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+"AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
+LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</pre>
                 </div>
             </div>
         </div>
