--- a/SLBr/Resources/Downloads.html
+++ b/SLBr/Resources/Downloads.html
@@ -291,7 +291,7 @@ Use of this source code is governed by a GNU license that can be found in the LI
     align-items: center;
     justify-content: center;
     display: flex;
-    font-family: "Segoe Fluent Icons";
+    font-family: "Segoe Fluent Icons", "Segoe MDL2 Assets";
     font-size: 25px;
     font-weight: lighter;
     user-select: none;
