--- a/SLBr/Resources/History.html
+++ b/SLBr/Resources/History.html
@@ -44,7 +44,7 @@ Use of this source code is governed by a GNU license that can be found in the LI
                 user-select: none;
             }
             .list_icon_backup {
-                font-family: "Segoe Fluent Icons";
+                font-family: "Segoe Fluent Icons", "Segoe MDL2 Assets";
                 font-size: 25px;
                 margin: 0;
                 font-weight: lighter;
