--- a/SLBr/Resources/NewTab.html
+++ b/SLBr/Resources/NewTab.html
@@ -106,7 +106,7 @@ ul.nav > li > a {
         </div>
     </div>
     <script type="text/javascript">
-        internal.background();
+        engine.postMessage({ type: "Internal", function: 'background' });
         document.getElementById('SearchField').addEventListener('keypress', function (e) {
             if (e.key === 'Enter') {
                 search(document.getElementById("SearchField").value);
