--- a/SLBr/Resources/Private.html
+++ b/SLBr/Resources/Private.html
@@ -54,7 +54,7 @@ h4 {
 .card {
     background-color: transparent;
     margin: 15px 15px 0 15px;
-    max-width: 500px;
+    max-width: 550px;
     padding: 10px;
 }
     </style>
@@ -70,7 +70,27 @@ h4 {
             <div class="Center">
                 <div class="card">
                     <h4>Private Mode is enabled</h4>
-                    <p>Your activity won’t be saved, including history, cookies, and site data. Privacy-related features like search suggestions and Safe Browsing are turned off. Private tabs close permanently when the browser shuts down.</p>
+                    <p>Search suggestions &amp; web risk service are turned off. Private tabs close permanently when the browser shuts down.</p>
+                    <br>
+                    <div style="display: flex;gap: 10px;">
+                        <div style="width: 100%;">
+                            <p>SLBr won't save:</p>
+                            <ul style="margin: 0 0 0 25px;">
+                                <li>Browsing history</li>
+                                <li>Cookies</li>
+                                <li>Site data</li>
+                            </ul>
+                        </div>
+                        <div style="width: 100%;">
+                            <p>Your activity is still visible to:</p>
+                            <ul style="margin: 0 0 0 25px;">
+                                <li>Websites visited</li>
+                                <li>Employer or school</li>
+                                <li>Internet service provider</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
