Improved history page.

--- a/SLBr/Resources/History.html
+++ b/SLBr/Resources/History.html
@@ -1,179 +1,5 @@
-﻿<!--Copyright © SLT Softwares. All rights reserved.
-Use of this source code is governed by a GNU license that can be found in the LICENSE file.-->
-
-<html>
+﻿<html>
     <head>
-        <meta charset="utf-8">
         <title>History</title>
-        <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
-    <body>
-        <header class="card">
-            <p class="font-icon"></p>
-            <p>History</p>
-        </header>
-        <div class="main">
-            <div class="summary" style="margin-bottom: 10px">
-                <div id="actions" style="display: inline;">
-                    <button class="button_style icon_button" onclick="NotifyUpdateList()" title="Refresh" style="margin-right: 5px;"></button>
-                    <button class="button_style" onclick="ClearAll()" style="margin-right: 5px;">Clear all</button>
-                </div>
-            </div>
-            <div id="downloads-display"></div>
-        </div>
-        <style>
-            .list_child {
-                margin: 0px 0px 10px;
-                padding: 0 7.5px 0 15px;
-                height: 50px;
-                display: flex;
-                align-items: center;
-            }
-            .title_area {
-                align-items: center;
-                display: flex;
-                width: 100%;
-            }
-            .list_icon {
-                width: 25px;
-                height: 25px;
-                margin-right: 10px;
-                align-items: center;
-                justify-content: center;
-                display: flex;
-                user-select: none;
-            }
-            .list_icon_backup {
-                font-family: "Segoe Fluent Icons", "Segoe MDL2 Assets";
-                font-size: 25px;
-                margin: 0;
-                font-weight: lighter;
-                user-select: none;
-            }
-            .list_text {
-                font-weight: 500;
-                margin-right: 10px;
-            }
-            .button_style {
-                background: whitesmoke;
-                height: 35px;
-                text-align: center;
-                display: inline-flex;
-                justify-content: center;
-                align-items: center;
-                width: 75px;
-                border: 1px solid gainsboro;
-                border-radius: 5px;
-                color: black;
-                transition: 0.5s;
-                user-select: none;
-                font-size: unset;
-                vertical-align: middle;
-            }
-            .list_button {
-                margin: 0 0 0 auto;
-            }
-            .button_style:hover {
-                color: black;
-                background: gainsboro;
-            }
-        </style>
-        <script type="text/javascript">
-            NotifyUpdateList();
-            var timer;
-            /*window.onload = function (e) {
-                timer = setInterval(UpdateList, 2500);
-            }*/
-            function NotifyUpdateList() {
-                internal.history();
-            }
-            function UpdateList(res) {
-                downloadsDisplay = document.getElementById('downloads-display')
-                let list = JSON.parse(res);
-                let currentIds = new Set();
-                if (list.length === 0) {
-                    downloadsDisplay.innerHTML = '<div class="card list_child"><div class="title_area"><p class="list_text">No history</p></div></div>';
-                }
-                else {
-                    for (let i = 0; i < list.length; i++) {
-                        currentIds.add(i.toString());
-                    }
-
-                    let children = downloadsDisplay.children;
-                    for (let i = 0; i < children.length; i++) {
-                        let id = children[i].id;
-                        if (!currentIds.has(id)) {
-                            downloadsDisplay.removeChild(children[i]);
-                        }
-                    }
-
-                    for (let i = 0; i < list.length; i++) {
-                        let key = i.toString();
-                        let existingDownload = document.getElementById(key);
-                        if (!existingDownload) {
-                            let icon = '\uEC6C'
-                            if (list[i].Tooltip.startsWith('slbr://')) {
-                                if (list[i].Tooltip.startsWith('slbr://history'))
-                                    icon = '\ue81c';
-                                else if (list[i].Tooltip.startsWith('slbr://downloads'))
-                                    icon = '\ue896';
-                                else
-                                    icon = '\ue713';
-                            }
-
-                            let link = document.createElement('a');
-                            link.href = list[i].Tooltip;
-                            let entry = `<div id="${key}" class="card list_child">
-                            <div class="title_area">
-                            <object class="list_icon" data="https://icons.duckduckgo.com/ip3/${link.hostname}.ico" type="image/png">
-                            <p class="list_icon_backup">${icon}</p>
-                            </object>
-                            <p class="list_text">${list[i].Name}</p>
-                            <a class="button_style list_button icon_button" target="_blank" focus-type="url"
-                            href="${list[i].Tooltip}"
-                            tabindex="0" title="Open in new tab"></a>
-                            </div></div>`;
-                            downloadsDisplay.innerHTML += entry;
-                        }
-                        else {
-                            link = existingDownload.querySelector('.list_text').textContent = list[i].Name;
-                            link = existingDownload.querySelector(".icon_button");
-                            link.href = list[i].Tooltip
-
-                            let icon = document.createElement('object');
-                            icon.classList.add('list_icon');
-                            icon.data = "https://icons.duckduckgo.com/ip3/" + link.hostname + ".ico";
-                            icon.type = "image/png";
-
-                            let errorText = document.createElement('p');
-                            errorText.classList.add('list_icon_backup');
-
-                            if (list[i].Tooltip.startsWith('slbr://')) {
-                                if (list[i].Tooltip.startsWith('slbr://history'))
-                                    errorText.textContent = '\ue81c';
-                                else if (list[i].Tooltip.startsWith('slbr://downloads'))
-                                    errorText.textContent = '\ue896';
-                                else
-                                    errorText.textContent = '\ue713';
-                            }
-                            else
-                                errorText.textContent = '\uEC6C';
-
-                            icon.appendChild(errorText);
-
-                            existingDownload.querySelector(".list_icon").replaceWith(icon);
-                        }
-                    }
-                }
-                if (list.length === 0)
-                    clearInterval(timer);
-            }
-
-            function ClearAll() {
-                //clearInterval(timer);
-                internal.clearHistory();
-                timer = setInterval(NotifyUpdateList, 250);
-            }
-        </script>
-    </body>
 </html>
