--- a/SLBr/Resources/NewTab.html
+++ b/SLBr/Resources/NewTab.html
@@ -17,33 +17,32 @@ ul.nav {
     padding-left: 0px;
     background-color: transparent;
     text-align: center;
-    margin-top: 15px;
+    margin-top: 5px;
     width: auto;
     list-style-position: inside;
     font-size: 0;
 }
-ul.nav > li {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    vertical-align: middle;
-    text-align: center;
-    background-color: white;
-    border: 1px solid gainsboro;
-    border-radius: 10px;
-    margin: 0 10px;
-    font-size: 14px;
-}
-ul.nav > li:hover {
-    background-color: whitesmoke;
-}
-ul.nav > li > a {
-    color: white;
-    text-decoration: none;
-    vertical-align: middle;
-    text-align: center;
-    height: 100%;
-}
+        ul.nav > li {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            vertical-align: middle;
+            text-align: center;
+            background-color: var(--secondary);
+            border-radius: 10px;
+            margin: 10px 10px 0 10px;
+            transition: background-color 0.3s ease;
+        }
+        ul.nav > li:hover {
+            background-color: var(--tertiary);
+        }
+            ul.nav > li > a {
+                color: var(--primary);
+                text-decoration: none;
+                vertical-align: middle;
+                text-align: center;
+                height: 100%;
+            }
     </style>
     <div class="Center NewTabSearchContainer">
         <div>
@@ -51,53 +50,53 @@ ul.nav > li > a {
                 <img class="Center SLBrIcon" style="user-select: none;" src="./SLBr.ico" width="100" height="100" />
             </div>
             <div class="SearchInput">
-                <span data-title="Search" class="font-icon"></span>
+                <span class="font-icon"></span>
                 <input type="text" id="SearchField" autocomplete="off" />
             </div>
             <div class="Center">
                 <ul class="nav">
                     <li>
-                        <a data-title="YouTube" href="https://www.youtube.com" class="Center">
+                        <a title="YouTube" href="https://www.youtube.com" class="Center">
                             <img style="user-select: none; border-radius: 5px;" src="https://www.youtube.com/favicon.ico" alt="YouTube" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
-                        <a data-title="Outlook" href="https://www.outlook.com" class="Center">
+                        <a -title="Outlook" href="https://www.outlook.com" class="Center">
                             <img style="user-select: none; border-radius: 5px;" src="https://outlook.live.com/mail/favicon.ico" alt="Outlook" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
-                        <a data-title="Gmail" href="https://www.gmail.com" class="Center">
+                        <a title="Gmail" href="https://www.gmail.com" class="Center">
                             <img style="user-select: none; border-radius: 5px;" src="https://ssl.gstatic.com/ui/v1/icons/mail/rfr/gmail.ico" alt="Gmail" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
-                        <a data-title="Stack Overflow" href="https://www.stackoverflow.com" class="Center">
+                        <a title="Stack Overflow" href="https://www.stackoverflow.com" class="Center">
                             <img style="user-select: none; border-radius: 5px;" src="https://cdn.sstatic.net/Sites/stackoverflow/Img/favicon.ico" alt="Stack Overflow" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
-                        <a data-title="Facebook" href="https://www.facebook.com" class="Center">
+                        <a title="Facebook" href="https://www.facebook.com" class="Center">
                             <img style="user-select: none; border-radius: 5px;" src="https://www.facebook.com/favicon.ico" alt="Facebook" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
-                        <a data-title="Twitter" href="https://www.twitter.com" class="Center">
+                        <a title="Twitter" href="https://www.twitter.com" class="Center">
                             <img style="user-select: none; border-radius: 5px;" src="https://abs.twimg.com/favicons/twitter.3.ico" alt="Twitter" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
-                        <a data-title="Reddit" href="https://www.reddit.com" class="Center">
+                        <a title="Reddit" href="https://www.reddit.com" class="Center">
                             <img style="user-select: none; border-radius: 5px;" src="https://www.redditstatic.com/shreddit/assets/favicon/64x64.png" alt="Reddit" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
-                        <a data-title="Amazon" href="https://www.amazon.com" class="Center">
+                        <a title="Amazon" href="https://www.amazon.com" class="Center">
                             <img style="user-select: none; border-radius: 5px;" src="https://www.amazon.com/favicon.ico" alt="Amazon" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
-                        <a data-title="Wikipedia" href="https://www.wikipedia.org" class="Center">
+                        <a title="Wikipedia" href="https://www.wikipedia.org" class="Center">
                             <img style="user-select: none; border-radius: 5px;" src="https://www.wikipedia.org/static/favicon/wikipedia.ico" alt="Wikipedia" width="60%" height="60%" />
                         </a>
                     </li>
