--- a/SLBr/Resources/Tetris.html
+++ b/SLBr/Resources/Tetris.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-    <div style="border: 1px solid gainsboro; margin: 10px; width: 75px; height: 35px; align-content: center; justify-items: center; text-align: center; border-radius: 5px;">
+    <div style="border: 1px solid var(--tertiary); margin: 10px; width: 75px; height: 35px; align-content: center; justify-items: center; text-align: center; border-radius: 5px;">
         <p id="score" style="margin: 0; font-weight: bold; font-size: 25px; line-height: 25px;">0</p>
     </div>
     <canvas width="300" height="600"></canvas>
