--- a/SLBr/Resources/Private.html
+++ b/SLBr/Resources/Private.html
@@ -24,30 +24,30 @@ ul.nav {
     font-size: 0;
 }
 
-ul.nav > li {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    vertical-align: middle;
-    text-align: center;
-    background-color: white;
-    border: 1px solid gainsboro;
-    border-radius: 10px;
-    margin: 0 10px;
-    font-size: 14px;
-}
+        ul.nav > li {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            vertical-align: middle;
+            text-align: center;
+            background-color: var(--primary);
+            border: 1px solid var(--tertiary);
+            border-radius: 10px;
+            margin: 0 10px;
+            font-size: 14px;
+        }
 
-ul.nav > li:hover {
-    background-color: whitesmoke;
-}
+            ul.nav > li:hover {
+                background-color: var(--secondary);
+            }
 
-ul.nav > li > a {
-    color: white;
-    text-decoration: none;
-    vertical-align: middle;
-    text-align: center;
-    height: 100%;
-}
+            ul.nav > li > a {
+                color: var(--primary);
+                text-decoration: none;
+                vertical-align: middle;
+                text-align: center;
+                height: 100%;
+            }
 h4 {
     margin: 0 0 7.5px 0;
 }
@@ -64,7 +64,7 @@ h4 {
                 <img class="Center SLBrIcon" style="user-select: none;" src="./SLBr.ico" width="100" height="100" />
             </div>
             <div class="SearchInput">
-                <span data-title="Search" class="font-icon"></span>
+                <span class="font-icon"></span>
                 <input type="text" id="SearchField" autocomplete="off" />
             </div>
             <div class="Center">
