--- a/SLBr/Resources/Private.html
+++ b/SLBr/Resources/Private.html
@@ -65,7 +65,7 @@ h4 {
             </div>
             <div class="SearchInput">
                 <span class="font-icon"></span>
-                <input type="text" id="SearchField" autocomplete="off" />
+                <input type="text" id="SearchField" autocomplete="off" placeholder="Search or enter address" />
             </div>
             <div class="Center">
                 <div class="card">
